2008-09-28  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/images/2.6-text-tool-and-rectangle-handles.png:
	Screenshots of the Text Tool bounding box and when the handles are
	outside the crop rectangle.

	* release-notes/gimp-2.6.htrw
	(Tools, Filters & Plug-ins/Minor Changes): Reorder items and
	include the above image.

2008-09-28  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/images/2.6-scroll-beyond-border.png: Remade, looks
	much nicer now.

2008-09-25  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw: Renamed the 'Tools' section to
	'Tools, Filters & Plug-ins' and addad a bunch of stuff to the
	'Minor Changes' list.

2008-09-24  Sven Neumann  <sven@gimp.org>

	* source/index.htrw: updated in preparation of the upcoming 2.6 release.

2008-09-24  Sven Neumann  <sven@gimp.org>

	* release-notes/gimp-2.6.htrw: fixed error introduced by my last
	commit.

	* admin/gimp-web-urls: added links for babl, GEGL and GTK+.

	* unix/index.htrw: updated in preparation of the upcoming 2.6 release.

2008-09-24  Sven Neumann  <sven@gimp.org>

	* release-notes/gimp-2.6.htrw: minor changes. Added link to
	Wikipedia article about GVfs.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw: Fix markup and express GEGL tool
	applicability better.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw (Known Problems): Put the Building
	sub section into here instead, it was too small for having its own
	sub section anyway.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw: Fix typos and use proper English.

2008-09-23  Martin Nordholts  <martinn@svn.gnome.org>

	* release-notes/gimp-2.6.htrw
	(Miscellaneous/Backwards Compatibility): Replaced with a much
	better text by Kevin Cozens containing sample code and proper
	references (regarding the Script-Fu let*-syntax bug fix breaking
	old scripts).
