@@ -288,7 +288,7 @@ src="images/2.4-releasesplash.jpg" width="640" height="200" />
 
 <h2>We Hope You Enjoy GIMP 2.6!</h2>
 
-<img class="groupshot" src="images/2.6-lgm-2008-groupshot.jpg" alt="LGM 2008 shot of the GIMP team" />
+<img class="figure" src="images/2.6-lgm-2008-groupshot.jpg" alt="LGM 2008 shot of the GIMP team" />
 <p>
   <i>A picture of (mostly) GIMP developers, taken by Garrett LeSage at
   Libre Graphics Meeting 2008, licenced
