@@ -1,5 +1,13 @@
 2008-09-28  Martin Nordholts  <martinn@svn.gnome.org>
 
+	* release-notes/gimp-2.6.htrw (We Hope You Enjoy GIMP 2.6!):
+	Use the layout class "figure" instead of "groupshot" for the
+	image.
+
+	* style/wgo.css: Remove the unused "groupshot" class.
+
+2008-09-28  Martin Nordholts  <martinn@svn.gnome.org>
+
 	* release-notes/images/2.6-text-tool-and-rectangle-handles.png:
 	Screenshots of the Text Tool bounding box and when the handles are
 	outside the crop rectangle.
